fix scrollbar #2

--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,13 @@
   width: 6px;
 }
 *::-webkit-scrollbar-thumb {
-  background-color: grey;
+  background-color: white;
   border-radius: 10px;
   background-clip: padding-box;
   border: 2px solid transparent;
 }
 *::-webkit-scrollbar-track {
-  background-color: #2f3542;
+  background-color: gray;
   border-radius: 5px;
   box-shadow: inset -1px -1px 3px white;
 }
